--- a/concerts.html
+++ b/concerts.html
@@ -123,7 +123,7 @@
       try {
         const calendarId = 't4gvg2pkc00vf9s1o0ch756lu8@group.calendar.google.com';  // 5docta7e484kuv6vb6f41qetfg@group.calendar.google.com';
         const myKey = 'AIzaSyCrP0rpUyRpb5JWFrhBqyqweL9D3JafMcQ'; // 'AIzaSyDdbu7SXbBwycepSAWB5bEPqmKThnTSQ3U';
-        let url = `https://www.googleapis.com/calendar/v3/calendars/${calendarId}/events?key=${myKey}&orderBy=startTime&singleEvents=True`;
+        const url = `https://www.googleapis.com/calendar/v3/calendars/${calendarId}/events?key=${myKey}&orderBy=startTime&singleEvents=True`;
 
         const apiCall = await fetch(url);
         const apiResponse = await apiCall.json();
