--- a/concerts.html
+++ b/concerts.html
@@ -206,7 +206,7 @@
       <div class="c2">
         <h2>Upcoming Performances</h2>
       </div><br />
-      <span id="upcoming_performances_content">Loading...</span><br />
+      <span id="upcoming_performances_content">Loading...</span>
 
       <div class="c2">
         <img src="pics/with%20the%20Seattle%20Metropolitan%20Chamber%20Orchestra_long.jpg" alt="" title="Susanna plays harpsichord with the Seattle Metropolitan Chamber Orchestra" height="250" id="banner" border="7" name="banner" /><br />
