fix to broken links on contact page

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 <div id="container">
   <div id="left_sub">
     <div id="header">
-      <h1><a href="index.php">Susanna Valleau</a></h1>
+      <h1><a href="index.html">Susanna Valleau</a></h1>
 
       <h3>Concert Organist</h3>
     </div>
@@ -45,17 +45,17 @@
     <div id="menu">
       <table id="menu">
         <tr>
-          <td><a href="index.php">Home</a></td>
+          <td><a href="index.html">Home</a></td>
 
-          <td><a href="biography.php">Biography</a></td>
+          <td><a href="biography.html">Biography</a></td>
 
-          <td><a href="concerts.php">Concerts</a></td>
+          <td><a href="concerts.html">Concerts</a></td>
 
-          <td><a href="recordings.php">Recordings</a></td>
+          <td><a href="recordings.html">Recordings</a></td>
 
-          <td><a href="repertoire.php">Repertoire</a></td>
+          <td><a href="repertoire.html">Repertoire</a></td>
 
-          <td><a href="contact.php">Contact Susanna</a></td>
+          <td><a href="contact.html">Contact Susanna</a></td>
         </tr>
       </table>
     </div>
