fix:  recordings.html page had its <audio> tags ripped out by HTMLTidy.  now reinstated

--- a/recordings.html
+++ b/recordings.html
@@ -91,21 +91,33 @@
         Christ Episcopal Church<br />
         Tacoma, WA<br />
 
-        <p><a href="music/Fughetta%20BWV%20677%20from%20Tacoma%20recital%2010.18.19.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/Fughetta BWV 677 from Tacoma recital 10.18.19.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/Fughetta BWV 677 from Tacoma recital 10.18.19.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/Fughetta BWV 677 from Tacoma recital 10.18.19.mp3">Download Here</a>
+        </audio></p><br />
         <b>J.S. Bach&mdash;Prelude and Fugue in b minor, BWV 544</b><br />
         Live Recording in Recital<br />
         2012 C.B. Fisk organ<br />
         Christ Episcopal Church<br />
         Andover, MA<br />
 
-        <p><a href="music/03_Prelude_and_Fugue_in_b_minor_BWV.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/03 Prelude and Fugue in b minor, BWV.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/03_Prelude_and_Fugue_in_b_minor_BWV.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/03_Prelude_and_Fugue_in_b_minor_BWV.mp3">Download Here</a>
+        </audio></p><br />
         <b>J.S. Bach&mdash;Schm&uuml;cke dich, o liebe Seele, BWV 654</b><br />
         Live Recording in Recital<br />
         2012 C.B. Fisk organ<br />
         Christ Episcopal Church<br />
         Andover, MA<br />
 
-        <p><a href="music/05%20Schmucke%20dich,%20o%20liebe%20Seele,%20BWV.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/05 Schmucke dich, o liebe Seele, BWV.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/05 Schmucke dich, o liebe Seele, BWV.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/05 Schmucke dich, o liebe Seele, BWV.mp3">Download Here</a>
+        </audio></p><br />
         <b>Charles Tournemire&mdash;"L&rsquo;&Eacute;piphanie" from L'Orgue Mystique, op. 55</b>
 
         <ol type="I" class="c3">
@@ -123,21 +135,33 @@
         Christ Episcopal Church<br />
         Andover, MA<br />
 
-        <p><a href="music/06%20_L'Epiphanie_%20from%20L'Orgue%20Mystiq.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/06 _L'Epiphanie_ from L'Orgue Mystiq.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/06 _L'Epiphanie_ from L'Orgue Mystiq.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/06 _L'Epiphanie_ from L'Orgue Mystiq.mp3">Download Here</a>
+        </audio></p><br />
         <b>Louis Vierne&mdash;&ldquo;Scherzetto&rdquo; from 24 Pi&egrave;ces en Style Libre, op. 31</b><br />
         Live Recording at &ldquo;Rising Star&rdquo; Recital for the American Guild of Organists National Convention<br />
         2003 Lively-Fulcher organ<br />
         Christ Church Cathedral<br />
         Nashville, TN<br />
 
-        <p><a href="music/Scherzetto%20in%20Nashville.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/Scherzetto in Nashville.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/Scherzetto in Nashville.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/Scherzetto in Nashville.mp3">Download Here</a>
+        </audio></p><br />
         <b>Jeanne Demessieux&mdash;Te Deum, op. 11</b><br />
         Live Recording in Recital<br />
         1965 Flentrop organ<br />
         St. Mark&rsquo;s Cathedral<br />
         Seattle, WA<br />
 
-        <p><a href="music/06%20Te%20Deum,%20op.%2011,%20Jean%20Demessieux.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/06 Te Deum, op. 11, Jean Demessieux.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/06 Te Deum, op. 11, Jean Demessieux.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/06 Te Deum, op. 11, Jean Demessieux.mp3">Download Here</a>
+        </audio></p><br />
         <b>Paul Hindemith&mdash;Sonata III</b>
 
         <ol type="I" class="c3">
@@ -151,19 +175,31 @@
         St. Mark&rsquo;s Cathedral<br />
         Seattle, WA<br />
 
-        <p><a href="music/05%20Sonata%20III,%20Paul%20Hindemith.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/05 Sonata III, Paul Hindemith.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/05 Sonata III, Paul Hindemith.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/05 Sonata III, Paul Hindemith.mp3">Download Here</a>
+        </audio></p><br />
         <b>Dietrich Buxtehude&mdash;Pr&auml;ludium in g-moll, BuxWV 149</b><br />
         1995 Brombaugh Organ<br />
         Lawrence University<br />
         Appleton, WI<br />
 
-        <p><a href="music/01%20Praeludium%20in%20g,%20Buxtehude.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/01 Praeludium in g, Buxtehude.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/01 Praeludium in g, Buxtehude.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/01 Praeludium in g, Buxtehude.mp3">Download Here</a>
+        </audio></p><br />
         <b>Stephen Paulus&mdash;&ldquo;As If the Whole Creation Cried&rdquo; from Triptych</b><br />
         1995 Brombaugh organ<br />
         Lawrence University<br />
         Appleton, WI<br />
 
-        <p><a href="music/03%20As%20If%20the%20Whole%20Creation%20Cried,%20P.mp3">Download Here</a></p><br />
+        <p><audio controls preload="metadata">
+          <source src="music/03 As If the Whole Creation Cried, P.mp3" type='audio/mpeg; codecs="mp3"'>
+          <source src="music/03 As If the Whole Creation Cried, P.ogg" type='audio/ogg; codecs="vorbis"'>
+          <a href ="music/03 As If the Whole Creation Cried, P.mp3">Download Here</a>
+        </audio></p><br />
       </div>
 
       <div class="c4"></div>
