- reinstated "Upcoming Events" section on index.html home page (was already working on concerts.html page)

--- a/concerts.html
+++ b/concerts.html
@@ -28,7 +28,7 @@
   </script>
   <script defer="defer" type="text/javascript">
     //<![CDATA[
-    const currentDateTime = moment().add(1, 'days');  // DEBUGGERY:  moment().add(-900, 'days');
+    const currentDateTime = moment();  // DEBUGGERY:  moment().add(-900, 'days');
 
     const template = (eventId, description, eventDateTime, location = '') => {
       const eventDateTimeDisplay = eventDateTime.format('MMMM D, YYYY, h:mm A');  // e.g. December 8, 2019, 3:00 PM
